3.0.4

- all available ASIO sample formats supported

- sound card frame size support for frame sizes other than 128, 256 and 512
  samples

- improvement of network buffer (jitter buffer) in case of small buffer sizes


3.0.3

- accessibility improvements

- show number of connected clients in window title (and therefore in OS task
  bar)

- added "Whats this" help text to the GUI controls in the general settings
  dialog, added Tool Tips to some GUI controls

- server logging history grid lines of weekend days are now plotted with
  different line width

- removed ALSA support since the ALSA interface implementation in llcon was
  buggy and will not be maintained in the future

- bug fix: fix for server logging history graph x-axis

- bug fix: fix for disconnect issue at the server


3.0.2

- new server features: for chat messages the time stamp is also shown, parsing
  of existing log file supported

- updates for help texts

- new design for fader tag

- change for Jack Linux audio interface: ports are only registered and
  connected once when the software is started up

- bug fix: under bad network conditions chat messages were randomly repeated

- bug fix: in case the server was shutdown and restarted during a connection,
  the channel name was not updated correctly at the server


3.0.1

- use low complexity CELT encoder profile, this lowers audio dropout
  probability on slow computers

- in case "Open Chat on New Message" is not enabled, a hint in the status bar
  is shown when a message is received

- bug fix: buzzing occurred when audio stream was interrupted (e.g. in case
  of network trouble)


3.0.0

- introduced new audio codec "CELT", not compatible to old versions

- only the sound card frame sizes 128, 256 and 512 is allowed (since other
  frame sizes require additional conversion buffers which introduce delay)

- IMA-ADPCM, MS-ADPCM removed

- since CELT works on 48 kHz sample rate, resampling was removed
